Issue #SB-4449 fix: Limited Content : When limited content opens via shared URL, gui glitch visible

--- a/src/app/client/src/styles.css
+++ b/src/app/client/src/styles.css
@@ -2732,6 +2732,6 @@ iframe.iziModal-iframe {
   pointer-events: auto;
 }
 
-.cursor-pointer-text {
+.cursor-text {
   cursor: text !important;
 }
